update gradle script, add Java module-info